# PostThat-

./: .dockerignore  Backend  LICENSE  Project Structure  Project spine  README.md  The core  app.py  front end  run_postthat.bat  static  structure exact
.github/workflows/: ci.yml
Core/: pyproject.toml
backend/: Dockerfile  requirements.tx
backend/backend/: database.py
backend/backend/backend/: ai_tools.py  auth.py
backend/backend/backend/backend/: cloud.py  media.py
backend/backend/backend/backend/backend/: app.py
desktop/: build.bat  desktop.py
mobile/: capacitor,config.json
