[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "postthat-core"
version = "0.1.0"
description = "Core logic shared across PostThat services"
authors = [{ name="Rick Bauer" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
